# fast-arrays

./: .gitignore  Cargo.toml  NOTICE.txt  README.md  fast-arrays.code-workspace
.cargo/: config.toml
examples/: serde_example.rs  view_example.rs
src/: lib.rs
src/array/: avx512f.rs  common.rs  fallback.rs  mod.rs
src/array/avx512f/: mod.rs  one_dimension.rs  two_dimensions.rs
src/mask/: avx512f.rs  fallback.rs  mod.rs
tests/: basic.rs  comparisons.rs  mask.rs  matrix.rs  one_input.rs  reductions.rs  repeating.rs  three_inputs.rs  two_inputs.rs
tests/utils/: mod.rs
