[package]
name = "fast_arrays"
version = "0.1.0"
edition = "2021"

[lib]
name = "fast_arrays"
path = "src/lib.rs"

[[bin]]
name = "example_code"
path = "src/bin/example_code.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
# uncomment to get maximum performance when testing
# opt-level = 3
# debug = 0

[dependencies]

[dev-dependencies]
rstest = "0.18.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
