[package]
name = "fast_arrays"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
description = "Can be used to perform vectorized calculations on arbitrarily sized 1D and 2D arrays with AVX-512 acceleration."
repository = "https://github.com/PhilWun/fast-arrays"
readme = "README.md"

[lib]
name = "fast_arrays"
path = "src/lib.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
# uncomment to get maximum performance when testing
# opt-level = 3
# debug = 0

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
rstest = "0.18.2"
